Add optional squignix support (based on whether or not we can detect an existing squignix container)

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,8 @@ script:
 
         ./hack-my-builds.sh
       )
+
+after_script:
+    - docker images
+    - docker logs pgp-happy-eyeballs
+    - docker logs rawdns
